[tool.poetry]
name = "streamlit-sample"
version = "0.1.0"
description = ""
authors = ["Mow17 <takidaaisu@gmail.com>"]
readme = "README.md"
packages = [{include = "streamlit_sample"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
